@@ -124,6 +124,27 @@ static int xnpod_fault_handler (xnarch_fltinfo_t *fltinfo)
                     xnarch_fault_pc(fltinfo),
                     xnarch_fault_trap(fltinfo));
 
+#ifdef __KERNEL__
+    if (xnarch_fault_fpu_p(fltinfo))
+        {
+#if defined(CONFIG_RTAI_OPT_FUSION) && defined(CONFIG_RTAI_HW_FPU)
+        xnarchtcb_t *tcb = xnthread_archtcb(xnpod_current_thread());
+        
+        if (xnpod_shadow_p() && !xnarch_fpu_init_p(tcb->user_task))
+            {
+            /* The faulting task is a shadow using the FPU for the first time,
+               initialize its FPU. Of course if RTAI is not compiled with
+               support for FPU, such use of the FPU is an error. */
+            xnarch_init_fpu(tcb);
+            return 1;
+            }
+#endif /* OPT_FUSION && HW_FPU */
+
+        print_symbol("RTAI: Invalid use of FPU in RTAI context at %s\n",
+                     xnarch_fault_pc(fltinfo));
+        }
+#endif /* __KERNEL__ */
+
     if (!xnpod_userspace_p())
         {
         xnprintf("RTAI: suspending kernel thread %p ('%s') at 0x%lx after exception #%u\n",
