@@ -1,3 +1,14 @@
+2005-06-08  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
+
+	* nucleus/pod.c (xnpod_fault_handler): Initialize FPU on first use
+	of FPU of shadow threads in primary mode.
+
+	* include/nucleus/asm-*/hal.h: platform dependent support for
+	the same feature.
+
+	* arch/x86/hal/x86.c, arch/ia64/hal/ia64.c: remove "invalid use of
+	FPU" message.
+
 2005-06-07  Philippe Gerum  <rpm@xenomai.org>
 
 	* include/nucleus/asm-uvm/system.h (main): Force
